--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
