--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-root-import": "^6.6.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
