--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
-    "history": "^5.0.0",
+    "history": "^4.10.1",
+    "polished": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
