--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "babel-plugin-root-import": "^6.6.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^4.10.1",
+    "immer": "^8.0.1",
     "polished": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
