--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "^6.6.0",
+    "date-fns": "^2.0.0-beta.5",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^4.10.1",
     "immer": "^8.0.1",
